# RIP(Go)/cmd/rip-go/main.go
@@ -121,10 +121,10 @@ func registerRoutes(r *gin.Engine, handler *handler.Handler) {
 	r.PUT("/api/order/:id/status", handler.UpdateOrderStatus) // Обновление статуса заказа
 
     // CRUD JSON для услуг
-    r.GET("/api/services/:id", handler.GetServiceJSON)
-    r.POST("/api/services", handler.CreateService)
-    r.PUT("/api/services/:id", handler.UpdateService)
-    r.DELETE("/api/services/:id", handler.DeleteService)
+    r.GET("/api/TransportService/:id", handler.GetServiceJSON)
+    r.POST("/api/TransportService", handler.CreateService)
+    r.PUT("/api/TransportService/:id", handler.UpdateService)
+    r.DELETE("/api/TransportService/:id", handler.DeleteService)
 
     // Авторизация
     r.POST("/sign_up", handler.RegisterUser)
@@ -141,20 +141,20 @@ func registerRoutes(r *gin.Engine, handler *handler.Handler) {
     }
 
     // Заявки (требуют авторизации)
-    ordersGroup := r.Group("/api/orders")
-    ordersGroup.Use(handler.AuthMiddleware.RequireAuth())
+    LogisticRequestGroup := r.Group("/api/LogisticRequest")
+    LogisticRequestGroup.Use(handler.AuthMiddleware.RequireAuth())
     {
-        ordersGroup.GET("", handler.GetOrders)
-        ordersGroup.GET("/:id", handler.GetOrder)
-        ordersGroup.DELETE("/:id", handler.DeleteOrder)
+        LogisticRequestGroup.GET("", handler.GetOrders)
+        LogisticRequestGroup.GET("/:id", handler.GetOrder)
+        LogisticRequestGroup.DELETE("/:id", handler.DeleteOrder)
     }
     
     // Специфичные маршруты с дополнительными сегментами
-    r.PUT("/api/orders/:id/form", handler.AuthMiddleware.RequireAuth(), handler.FormOrder)
-    r.PUT("/api/orders/:id/update", handler.AuthMiddleware.RequireAuth(), handler.UpdateOrder)
+    r.PUT("/api/LogisticRequest/:id/form", handler.AuthMiddleware.RequireAuth(), handler.FormOrder)
+    r.PUT("/api/LogisticRequest/:id/update", handler.AuthMiddleware.RequireAuth(), handler.UpdateOrder)
     
     // Маршрут модератора для завершения заявки
-    moderatorCompleteGroup := r.Group("/api/orders/:id")
+    moderatorCompleteGroup := r.Group("/api/LogisticRequest/:id")
     moderatorCompleteGroup.Use(handler.AuthMiddleware.RequireModerator())
     {
         moderatorCompleteGroup.PUT("/complete", handler.CompleteOrder)
@@ -168,8 +168,8 @@ func registerRoutes(r *gin.Engine, handler *handler.Handler) {
     }
 
     // М-М заявка-услуга
-    r.DELETE("/api/orders/:id/services/:service_id", handler.RemoveServiceFromOrder)
-    r.PUT("/api/orders/:id/services/:service_id", handler.UpdateOrderService)
+    r.DELETE("/api/LogisticRequest/:id/TransportService/:service_id", handler.RemoveServiceFromOrder)
+    r.PUT("/api/LogisticRequest/:id/TransportService/:service_id", handler.UpdateOrderService)
 
     // Swagger документация
     r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
